# mcp-playwright

./: DEPLOYMENT.md  MANIFEST.in  PUBLISH_SETUP.md  README.md  RELEASE.md  TECHNICAL_ARCHITECTURE.md  TODO  main.py  pyproject.toml  test_quick.py
.github/workflows/: ci.yml  publish.yml
docs/: fastmcp_docs.html
examples/: claude_desktop_config.json  usage_example.py
mcp_playwright/: __init__.py  server.py
mcp_playwright/core/: browser_manager.py
mcp_playwright/prompt/: __init__.py  fastmcp_template.py  prompt_template.py  prompt_template_manager.py
mcp_playwright/tools/: browser_tools.py
scripts/: release.py
tests/: test_server.py
